<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cn.datask</groupId>
    <artifactId>dat-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>DAT :</name>
    <url>https://github.com/junjiem/dat</url>
    <description>
        Asking yours data in a natural language way through pre-modeling (data models and semantic models).
    </description>

    <!-- 开发者信息 -->
    <developers>
        <developer>
            <name>Junjie.M</name>
            <email>118170653@qq.com</email>
            <organization>cn.datask</organization>
            <roles>
                <role>Project Manager</role>
                <role>Architect</role>
            </roles>
        </developer>
    </developers>

    <!-- 开源许可证 -->
    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <!-- 版本控制仓库地址 -->
    <scm>
        <connection>scm:git:https://github.com/junjiem/dat.git</connection>
        <developerConnection>scm:git:ssh://git@github.com:junjiem/dat.git</developerConnection>
        <url>https://github.com/junjiem/dat</url>
    </scm>

    <issueManagement>
        <system>github</system>
        <url>https://github.com/junjiem/dat/issues</url>
    </issueManagement>

    <modules>
        <module>dat-core</module>
        <module>dat-embedders</module>
        <module>dat-rerankers</module>
        <module>dat-storers</module>
        <module>dat-llms</module>
        <module>dat-adapters</module>
        <module>dat-agents</module>
        <module>dat-sdk</module>
        <module>dat-servers</module>
        <module>dat-cli</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <revision>0.6.2</revision>
        <lombok.version>1.18.38</lombok.version>
        <jackson.version>2.18.3</jackson.version>
        <langchain4j.vserion>1.4.0</langchain4j.vserion>
        <langchain4j-beta.version>1.4.0-beta10</langchain4j-beta.version>
        <langchain4j-community.version>1.4.0-beta10</langchain4j-community.version>
        <langchain4j-embeddings.version>1.4.0-beta10</langchain4j-embeddings.version>
        <junit.jupiter.version>5.10.0</junit.jupiter.version>
        <logback.version>1.5.18</logback.version>
    </properties>

    <profiles>

        <!-- Deploy to Maven Central -->
        <profile>
            <id>central</id>
            <build>
                <plugins>
                    <!-- 打包时跳过测试 -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.5.3</version>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </plugin>
                    <!-- compile插件 -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.14.1</version>
                        <configuration>
                            <source>${maven.compiler.source}</source>
                            <target>${maven.compiler.target}</target>
                        </configuration>
                    </plugin>
                    <!-- source插件 -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- javadoc插件 -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.11.2</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>flatten-maven-plugin</artifactId>
                        <version>1.5.0</version>
                        <configuration>
                            <updatePomFile>true</updatePomFile>
                            <flattenMode>resolveCiFriendliesOnly</flattenMode>
                        </configuration>
                        <executions>
                            <execution>
                                <id>flatten</id>
                                <phase>process-resources</phase>
                                <goals>
                                    <goal>flatten</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>flatten.clean</id>
                                <phase>clean</phase>
                                <goals>
                                    <goal>clean</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- GPG插件 -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.8</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <!-- 让 GPG 2.1+ 支持无交互口令输入 -->
                            <gpgArguments>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                    </plugin>
                    <!-- central发布插件 -->
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.9.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <!-- 和 settings.xml / setup-java 里的 server-id 对应 -->
                            <publishingServerId>central</publishingServerId>
                            <!-- CI 中建议自动发布并等待到已发布状态 -->
                            <autoPublish>true</autoPublish>
                            <waitUntil>published</waitUntil>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project> 